VG-3741 - fixed the nowrap text to allow it to have an ellipsis.

--- a/app/styles/components/modules/_table_result.scss
+++ b/app/styles/components/modules/_table_result.scss
@@ -107,6 +107,7 @@
 
 .nowrap {
     white-space: nowrap;
-    text-overflow: clip ellipsis;
+    text-overflow: ellipsis;
+    overflow: hidden;
 }
 
